syntax = "proto3";

option java_multiple_files = true;
option java_generic_services = true;
option java_package = "service";
option java_outer_classname = "CurrencyServiceProto";

service ExchangeRateService {
    rpc getExchangeRateStream(ExchangeRateRequest) returns (stream ExchangeRateSequence) {}
    rpc getInitialExchangeRates(ExchangeRateRequest) returns (ExchangeRateSequence) {}
}

enum Currency {
    PLN = 0;
    EUR = 1;
    USD = 2;
    JPY = 3;
    CHF = 4;
    CNY = 5;
}

message ExchangeRateRequest {
    Currency baseCurrency = 1;
    repeated Currency currencyType = 2;
}

message ExchangeRateInfo {
    Currency currency = 1;
    double rate = 2;
}

message ExchangeRateSequence {
    repeated ExchangeRateInfo exchangeRateInfo = 1;
}